# fastrad

./: .gitignore  .readthedocs.yaml  .zenodo.json  CITATION.cff  README.md  dummy_radiomics.py  pyproject.toml
.github/workflows/: auto_release.yaml  publish.yaml  publish.yml  python-app.yml
benchmarks/: cpu_bench.py  download_rider_pairs.py  download_tcia_sample.py  fastrad_stability_analysis.py  memory_bench.py  perturbation.py  profile_memory.py  report_generator.py  run_benchmark.py  run_dense_performance.py  run_ibsi_compliance.py  run_memory_efficiency.py  run_numerical_parity.py  run_reproducibility_stability.py  run_robustness.py  run_runtime_performance.py  run_tinygrad_comparison.py
docs/: api.rst  benchmarks.rst  conf.py  contributing.rst  developers.rst  faq.rst  features.rst  index.rst  installation.rst  introduction.rst  learn.rst  quickstart.rst  requirements.txt  user_guide.rst
examples/: 01_basic_extraction.py  02_gpu_acceleration.py  03_batch_processing_tcia.py  04_advanced_configuration.py  05_clinical_filters_io.py
fastrad/: __init__.py  dense_extractor.py  extractor.py  filters.py  image.py  io.py  logger.py  settings.py  voxel_extractor.py
fastrad/features/: __init__.py  firstorder.py  firstorder_tiny.py  glcm.py  gldm.py  glrlm.py  glszm.py  ngtdm.py  shape.py  shape2d.py  shape_tables.py  shape_utils.py
fastrad/utils/: __init__.py  device.py  dicom.py  tensor_ops.py
tests/: analyze_glcm.py  check_table.py  extract_tables.py  make_fixtures.py  test_dense.py  test_filters.py  test_firstorder.py  test_glcm.py  test_gldm.py  test_glrlm.py  test_glszm.py  test_ibsi.py  test_io.py  test_ngtdm.py  test_robustness.py  test_shape.py  test_shape2d.py  test_shape_utils.py  test_verify_dense.py
tests/fixtures/ibsi/: reference.json
tests/fixtures/image/: 0000.dcm  0001.dcm  0002.dcm  0003.dcm  0004.dcm
tests/fixtures/mask/: 0000.dcm  0001.dcm  0002.dcm  0003.dcm  0004.dcm
tests/scripts/: generate_ibsi_reference.py
