[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastrad"
version = "2.0.3"
description = "GPU-accelerated Python library that reimplements pyradiomics with full feature parity"
readme = "README.md"
authors = [
    { name = "fastrad authors" }
]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "pydicom",
    "numpy",
    "scipy"
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0",
    "cucim-cu12>=24.0"
]
test = [
    "pytest",
    "SimpleITK",
    "nibabel"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.20.0",
    "sphinx-copybutton>=0.5.2",
    "numpydoc"
]

[tool.hatch.build.targets.wheel]
packages = ["fastrad"]

[tool.hatch.metadata]
allow-direct-references = true
